[components] Stop switch description from overflowing

--- a/packages/@sanity/components/src/toggles/styles/Switch.css
+++ b/packages/@sanity/components/src/toggles/styles/Switch.css
@@ -188,6 +188,7 @@
   position: relative;
   display: block;
   left: calc(var(--switch-track-length) + 0.5rem);
+  width: calc(100% - var(--switch-track-length) - 0.5rem);
 }
 
 .track {
